Mon Mar 18 21:49:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add KRB5_RUN_FLAGS

	* Makefile.in: Use runtime flags.

Sun Mar 17 20:32:08 1996  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* configure.in: Add USE_ANAME, USE_KRB5_LIBRARY, KRB5_LIBRARIES so
		that Makefile does not have to know build tree layout.

        * Makefile.in: Rework to be consistant with configure defines so
		that configure can specify other needed libraries.

Sun Mar 17 02:10:19 1996  Mark W. Eichin  <eichin@cygnus.com>

	* copy_addrs.c (krb5_copy_addr): make non-static so we can use it
	in mk_cred.
	* mk_cred.c (krb5_mk_ncred_basic): copy local_addr and remote_addr
	instead of just aliasing them, so we can safely free them ourselves.

Fri Mar 15 14:29:00 1996  Richard Basch  <basch@lehman.com>

	* in_tkt_ktb.c: Close the keytab if we opened it, not if the
	caller opened it.

Wed Mar 13 17:31:30 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Use AC_HEADER_STDARG.

Mon Mar 11 11:15:26 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* str_conv.c (krb5_timestamp_to_string): Handle statement not
		reached warning.

	* ser_addr.c (krb5_address_internalize): Add magic numbers

Thu Feb 29 11:49:38 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fwd_tgt.c (NEED_SOCKETS): Use NEED_SOCKETS instead of #including
	        <netdb.h>

Sat Feb 24 16:27:54 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gc_via_tkt.c (krb5_get_cred_via_tkt): Fix memory leak; free
		enctypes after use.

Thu Jan 25 01:35:52 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* rd_req_dec.c (krb5_rd_req_decrypt_tkt_part): Remove outdated
        comment about mapping etype to ktype.

	* gc_via_tkt.c (krb5_get_cred_via_tkt): If the keyblock.enctype is
        non-null in in_cred, then request that particular key.

Wed Jan 24 21:48:53 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* get_creds.c (krb5_get_credentials): Only match against enctype
        if it is non-null in increds.
